# Gallant

./: .gitignore  parameter_conclusions.md  pyproject.toml  readme.md  useful_commands.txt
cfg/task/: G1LidarLinvel.yaml  G1LidarNew.yaml  G1LidarOld.yaml
scripts/: vis_terrain.py
src/gallant/: __init__.py  command.py  env.py  observation copy.py  observation.py  reward.py  termination.py
src/gallant/terrain/: __init__.py  functional.py  ground.xml  hussar_terrain.py  terrain_generator.py  terrain_importer.py
src/gallant_learning/: __init__.py  ppo_gallant.py
